--- a/about.html
+++ b/about.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Portfolio Site</title>
     <link rel="stylesheet" href="index.css">
+    <title>About</title>
 </head>
 <body>
-    <h1 class="title">Caitlin's Portfolio Site</h1>
+    <h1 class="title">About Me</h1>
     <ul>
             <li class="links">
                     <a href="index.html">Home</a> </li>
@@ -17,12 +17,8 @@
             <li class="links">
                     <a href="projects.html">Projects</a> </li>
     </ul>
-    <p>Welcome to my portfolio. Here I will show you a little bit about my coding journey, and demonstrate some of my work.</p>
-    <h2>Past Experience</h2>
-    <ul>
-        <li>Northcoders student December 2019 - March 2020</li>
-    </ul>
-    
+    <img src="/images/me.jpeg" alt="A picture of me and a dog" style="width:500px;">
+    <p>Hello, I'm Caitlin. I'm a Northcoders student who likes pina coladas and getting caught in the rain!</p>
+    <a href="https://github.com/Caitlin-B/">My Github</a>
 </body>
-
 </html>
